NXP-5847 - Nuxeo java launcher; add dependency on nuxeo-launcher-commons and use Configuration management code from it